Fix background color when stretching on mobile

--- a/src/app.scss
+++ b/src/app.scss
@@ -27,6 +27,10 @@ html {
 }
 
 body {
+	background-color: $color-completelyblack;
+}
+
+main>div>.content-section {
 	background-color: $color-surface;
 }
 
